2013-04-13  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-utilities-snarf): New custom group.
	* lisp/bbdb-snarf.el: New file.
	* lisp/Makefile.in, lisp/makefile-temp: Compile it.

2013-04-13  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-com.el (bbdb-merge-records): Fix docstring.  Merge
	also affixes.  Do not enforce multi-line layout for display.

2013-04-13  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-format-address-default, bbdb-format-address):
	Allow city, postcode, state, and country to be nil.

2013-04-13  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-hash-record, bbdb-change-record): Fix
	docstring.

2013-04-13  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-new-mails-primary): Change default to query.

2013-04-13  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-mua.el (bbdb-mua-summary-unify)
	(bbdb-mua-summary-mark): Allow bbdb-mua-summary-mark-field to be a
	function.
	* lisp/bbdb.el (bbdb-mua-summary-mark-field): Fix docstring.

2013-04-13  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-extract-address-components): New function.
	(bbdb-puthash-mail): Use it.
	* lisp/bbdb-com.el (bbdb-dwim-mail): Use it.

2013-04-13  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-com.el (bbdb-complete-mail): Simplify. Do not throw
	error messages that prevent other completion functions to take
	over.

2013-04-13  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-vm.el (bbdb/vm-auto-folder-field)
	(bbdb/vm-virtual-folder-field, bbdb/vm-auto-folder)
	(bbdb/vm-auto-add-label-list, bbdb/vm-auto-add-label-field): Fix
	docstring.
	(bbdb/vm-virtual-folder): Check more carefully whether
	vm-virtual-folder-alist contains already what we want to add. Fix
	docstring.

2013-04-13  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-sc.el (bbdb/sc-attribution-field): Fix docstring.

2013-04-13  Roland Winkler  <winkler@gnu.org>
	* tex/Makefile.in: Acknowledge DESTDIR.

2013-02-16  Roland Winkler  <winkler@gnu.org>